--- a/manuscripts/child-documents/results.Rmd
+++ b/manuscripts/child-documents/results.Rmd
@@ -111,7 +111,7 @@ The similarity matrix in Figure \@ref(fig:phase-similarity-plots-alpha)A shows t
 
 The interval plot in Figure \@ref(fig:phase-similarity-plots-alpha)B shows the results for the group-level contrasts estimating the difference in functional connectome similarity within and between participants at various levels of the session and state predictors. Overall, functional connectomes were estimated to be $`r papaja::apa_num(main_effect_estimate)`$ points more similar within participants (M = `r papaja::apa_num(within_participants_main_effect_mean)`, SE = `r papaja::apa_num(within_participants_main_effect_se)`) than between participants (M = `r papaja::apa_num(between_participants_main_effect_mean)`, SE = `r papaja::apa_num(between_participants_main_effect_se)`) when averaging over the levels of session and state, with differences no lower than $`r papaja::apa_num(main_effect_lower)`$ points and no higher than $`r papaja::apa_num(main_effect_upper)`$ points also being reasonably compatible with our data, given the background model. For the contrasts of session averaged over levels of state, functional connectomes from different sessions were estimated to be $`r papaja::apa_num(between_sessions_estimate)`$ points, 95% CI [$`r papaja::apa_num(between_sessions_lower)`$, $`r papaja::apa_num(between_sessions_upper)`$], more similar within participants (M = `r papaja::apa_num(within_participants_between_sessions_mean)`, SE = `r papaja::apa_num(within_participants_between_sessions_se)`) than between participants (M = `r papaja::apa_num(between_participants_between_sessions_mean)`, SE = `r papaja::apa_num(between_participants_between_sessions_se)`), and functional connectomes from the same sessions were estimated to be $`r papaja::apa_num(within_sessions_estimate)`$ points, 95% CI [$`r papaja::apa_num(within_sessions_lower)`$, $`r papaja::apa_num(within_sessions_upper)`$], more similar within participants (M = `r papaja::apa_num(within_participants_within_sessions_mean)`, SE = `r papaja::apa_num(within_participants_within_sessions_se)`) than between participants (M = `r papaja::apa_num(between_participants_within_sessions_mean)`, SE = `r papaja::apa_num(between_participants_within_sessions_se)`). For the contrasts of state averaged over levels of session, functional connectomes from different states were estimated to be $`r papaja::apa_num(between_states_estimate)`$ points, 95% CI [$`r papaja::apa_num(between_states_lower)`$, $`r papaja::apa_num(between_states_upper)`$], more similar within participants (M = `r papaja::apa_num(within_participants_between_states_mean)`, SE = `r papaja::apa_num(within_participants_between_states_se)`) than between participants (M = `r papaja::apa_num(between_participants_between_states_mean)`, SE = `r papaja::apa_num(between_participants_between_states_se)`), and functional connectomes from the same state were estimated to be $`r papaja::apa_num(within_states_estimate)`$ points, 95% CI [$`r papaja::apa_num(within_states_lower)`$, $`r papaja::apa_num(within_states_upper)`$], more similar within participants (M = `r papaja::apa_num(within_participants_within_states_mean)`, SE = `r papaja::apa_num(within_participants_within_states_se)`) than between participants (M = `r papaja::apa_num(between_participants_within_states_mean)`, SE = `r papaja::apa_num(between_participants_within_states_se)`). For the simple contrasts, functional connectomes from different sessions and states were estimated to be $`r papaja::apa_num(between_sessions_states_estimate)`$ points, 95% CI [$`r papaja::apa_num(between_sessions_states_lower)`$, $`r papaja::apa_num(between_sessions_states_upper)`$], more similar within participants (M = `r papaja::apa_num(within_participants_between_sessions_states_mean)`, SE = `r papaja::apa_num(within_participants_between_sessions_states_se)`) than between participants (M = `r papaja::apa_num(between_participants_between_sessions_states_mean)`, SE = `r papaja::apa_num(between_participants_between_sessions_states_se)`). Functional connectomes from different sessions but the same state were estimated to be $`r papaja::apa_num(between_sessions_within_states_estimate)`$ points, 95% CI [$`r papaja::apa_num(between_sessions_within_states_lower)`$, $`r papaja::apa_num(between_sessions_within_states_upper)`$], more similar within participants (M = `r papaja::apa_num(within_participants_between_sessions_within_states_mean)`, SE = `r papaja::apa_num(within_participants_between_sessions_within_states_se)`) than between participants (M = `r papaja::apa_num(between_participants_between_sessions_within_states_mean)`, SE = `r papaja::apa_num(between_participants_between_sessions_within_states_se)`). Functional connectomes from the same session but different states were estimated to be $`r papaja::apa_num(within_sessions_between_states_estimate)`$ points, 95% CI [$`r papaja::apa_num(within_sessions_between_states_lower)`$, $`r papaja::apa_num(within_sessions_between_states_upper)`$], more similar within participants (M = `r papaja::apa_num(within_participants_within_sessions_between_states_mean)`, SE = `r papaja::apa_num(within_participants_within_sessions_between_states_se)`) than between participants (M = `r papaja::apa_num(between_participants_within_sessions_between_states_mean)`, SE = `r papaja::apa_num(between_participants_within_sessions_between_states_se)`). Functional connectomes from the same session and state were estimated to be $`r papaja::apa_num(within_sessions_states_estimate)`$ points, 95% CI [$`r papaja::apa_num(within_sessions_states_lower)`$, $`r papaja::apa_num(within_sessions_states_upper)`$], more similar within participants (M = `r papaja::apa_num(within_participants_within_sessions_states_mean)`, SE = `r papaja::apa_num(within_participants_within_sessions_states_se)`) than between participants (M = `r papaja::apa_num(between_participants_within_sessions_states_mean)`, SE = `r papaja::apa_num(between_participants_within_sessions_states_se)`).
 
-The ridge plots in Figure \@ref(fig:phase-similarity-plots-alpha)C show the results for the individual-level contrasts estimating the difference in functional connectome similarity within and between participants at various levels of the session and state predictors. Each ridge depicts the 95% compatibility distribution [@schwederhjort_ConfidenceLikelihoodProbability_2016; @xiesingh_ConfidenceDistributionFrequentist_2013] for a given contrast, and the gradient fill shows each compatible value's distance from the group-level point estimate. The group-level contrast results for a given effect are depicted here as a grey interval in the background, for ease of comparison between the group-level and individual-level estimates. Although the group-level estimates were representative of the within-between similarities of some participants, we emphasize that they were not representative of a roughly equal amount of participants, who either had estimates compatible with both less and more similarity within than between individuals, or who has estimates moderately or strongly higher than the group-level estimates.
+The ridge plots in Figure \@ref(fig:phase-similarity-plots-alpha)C show the results for the individual-level contrasts estimating the difference in functional connectome similarity within and between participants at various levels of the session and state predictors. Each ridge depicts the 95% compatibility distribution [@schwederhjort_ConfidenceLikelihoodProbability_2016; @xiesingh_ConfidenceDistributionFrequentist_2013] for a given contrast, and the gradient fill shows each compatible value's distance from the group-level point estimate. The group-level contrast results for a given effect are depicted here as a grey interval in the background, for ease of comparison between the group-level and individual-level estimates. Although the group-level estimates were representative of the within-between similarities of some participants, we emphasize that they were not representative of a roughly equal amount of participants, who either had estimates compatible with both less and more similarity within than between individuals, or who had estimates moderately or strongly higher than the group-level estimates.
 
 <!-- Importantly, although the group-level contrasts are consistent with functional connectomes that are more similar within than between individuals, they are not consistent with the 50-100% increase in overall similarity within- versus between-individuals reported in the fMRI literature [cf. @grattonetal_FunctionalBrainNetworks_2018]. Moreover, as can be seen in Figure \@ref(fig:phase-similarity-plots-alpha)C, the group-level result of more similarity within than between individuals does not necessarily hold true for all participants in our sample. Several participants have estimates whose lower bounds are compatible with more similarity between than within individuals, and whose upper bounds are compatible with more similarity within than between individuals, leaving us with insufficient information to determine the directionality of the effects for these participants (if any). Thus, these results are also not compatible with the stable and trait-like characterization of functional networks reported in the fMRI literature [cf. @grattonetal_FunctionalBrainNetworks_2018]. -->
 
@@ -186,13 +186,11 @@ targets::tar_load(amplitude_similarity_results_figure_alpha)
 knitr::include_graphics(here::here(amplitude_similarity_results_figure_alpha))
 ```
 
-<!-- TODO work on this part. Point out commonality with phase similarity matrix -->
+The similarity matrix in Figure \@ref(fig:amplitude-similarity-plots-alpha)A shows the RV coefficient estimates between all pairs of amplitude-coupling functional connectomes from a given individual, session, and state within the alpha band. Again there were no visually obvious patterns of similarity consistent across participants, but notably, nearly the same individual differences seen in \@ref(fig:phase-similarity-plots-alpha)A with phase coupling functional connectome similarities were seen here with amplitude coupling. This is perhaps unsurprising, given that phase values estimated with the cross spectral density are weighted by amplitude [@cohen_AnalyzingNeuralTime_2014].
 
-The similarity matrix in Figure \@ref(fig:amplitude-similarity-plots-alpha)A shows the RV coefficient estimates between all pairs of amplitude-coupling functional connectomes from a given individual, session, and state within the alpha band. The boxes on the diagonal show within-participant functional connectome similarities, the boxes on the off-diagonal show between-participant functional connectome similarities, and the individual tiles within each box are organized as in Figure \@ref(fig:similarity-key). There were no visually obvious patterns of similarity consistent across participants, but there were some individual differences worth highlighting: Participant P03 showed high similarity across sessions and states, corresponding to an individual effect; Participants P14, P17, and P19 showed moderate to high similarity in the eyes open state across sessions, and moderate similarity between participants, corresponding to a partial state effect; and participants P07, P08, P11, and P20 showed moderate similarity across sessions and states with themselves and each other, corresponding to a partial group effect. The remaining participants showed no distinctive patterns.
+The interval plot in Figure \@ref(fig:amplitude-similarity-plots-alpha)B shows the results for the group-level contrasts estimating the difference in functional connectome similarity within and between participants at various levels of the session and state predictors. Overall, functional connectomes were estimated to be $`r papaja::apa_num(main_effect_estimate)`$ points, 95% CI [$`r papaja::apa_num(main_effect_lower)`$, $`r papaja::apa_num(main_effect_upper)`$], more similar within participants (M = `r papaja::apa_num(within_participants_main_effect_mean)`, SE = `r papaja::apa_num(within_participants_main_effect_se)`) than between participants (M = `r papaja::apa_num(between_participants_main_effect_mean)`, SE = `r papaja::apa_num(between_participants_main_effect_se)`) when averaging over the levels of session and state. For the contrasts of session averaged over levels of state, functional connectomes from different sessions were estimated to be $`r papaja::apa_num(between_sessions_estimate)`$ points, 95% CI [$`r papaja::apa_num(between_sessions_lower)`$, $`r papaja::apa_num(between_sessions_upper)`$], more similar within participants (M = `r papaja::apa_num(within_participants_between_sessions_mean)`, SE = `r papaja::apa_num(within_participants_between_sessions_se)`) than between participants (M = `r papaja::apa_num(between_participants_between_sessions_mean)`, SE = `r papaja::apa_num(between_participants_between_sessions_se)`), and functional connectomes from the same sessions were estimated to be $`r papaja::apa_num(within_sessions_estimate)`$ points, 95% CI [$`r papaja::apa_num(within_sessions_lower)`$, $`r papaja::apa_num(within_sessions_upper)`$], more similar within participants (M = `r papaja::apa_num(within_participants_within_sessions_mean)`, SE = `r papaja::apa_num(within_participants_within_sessions_se)`) than between participants (M = `r papaja::apa_num(between_participants_within_sessions_mean)`, SE = `r papaja::apa_num(between_participants_within_sessions_se)`). For the contrasts of state averaged over levels of session, functional connectomes from different states were estimated to be $`r papaja::apa_num(between_states_estimate)`$ points, 95% CI [$`r papaja::apa_num(between_states_lower)`$, $`r papaja::apa_num(between_states_upper)`$], more similar within participants (M = `r papaja::apa_num(within_participants_between_states_mean)`, SE = `r papaja::apa_num(within_participants_between_states_se)`) than between participants (M = `r papaja::apa_num(between_participants_between_states_mean)`, SE = `r papaja::apa_num(between_participants_between_states_se)`), and functional connectomes from the same state were estimated to be $`r papaja::apa_num(within_states_estimate)`$ points, 95% CI [$`r papaja::apa_num(within_states_lower)`$, $`r papaja::apa_num(within_states_upper)`$], more similar within participants (M = `r papaja::apa_num(within_participants_within_states_mean)`, SE = `r papaja::apa_num(within_participants_within_states_se)`) than between participants (M = `r papaja::apa_num(between_participants_within_states_mean)`, SE = `r papaja::apa_num(between_participants_within_states_se)`). For the simple contrasts, functional connectomes from different sessions and states were estimated to be $`r papaja::apa_num(between_sessions_states_estimate)`$ points, 95% CI [$`r papaja::apa_num(between_sessions_states_lower)`$, $`r papaja::apa_num(between_sessions_states_upper)`$], more similar within participants (M = `r papaja::apa_num(within_participants_between_sessions_states_mean)`, SE = `r papaja::apa_num(within_participants_between_sessions_states_se)`) than between participants (M = `r papaja::apa_num(between_participants_between_sessions_states_mean)`, SE = `r papaja::apa_num(between_participants_between_sessions_states_se)`). Functional connectomes from different sessions but the same state were estimated to be $`r papaja::apa_num(between_sessions_within_states_estimate)`$ points, 95% CI [$`r papaja::apa_num(between_sessions_within_states_lower)`$, $`r papaja::apa_num(between_sessions_within_states_upper)`$], more similar within participants (M = `r papaja::apa_num(within_participants_between_sessions_within_states_mean)`, SE = `r papaja::apa_num(within_participants_between_sessions_within_states_se)`) than between participants (M = `r papaja::apa_num(between_participants_between_sessions_within_states_mean)`, SE = `r papaja::apa_num(between_participants_between_sessions_within_states_se)`). Functional connectomes from the same session but different states were estimated to be $`r papaja::apa_num(within_sessions_between_states_estimate)`$ points, 95% CI [$`r papaja::apa_num(within_sessions_between_states_lower)`$, $`r papaja::apa_num(within_sessions_between_states_upper)`$], more similar within participants (M = `r papaja::apa_num(within_participants_within_sessions_between_states_mean)`, SE = `r papaja::apa_num(within_participants_within_sessions_between_states_se)`) than between participants (M = `r papaja::apa_num(between_participants_within_sessions_between_states_mean)`, SE = `r papaja::apa_num(between_participants_within_sessions_between_states_se)`). Functional connectomes from the same session and state were estimated to be $`r papaja::apa_num(within_sessions_states_estimate)`$ points, 95% CI [$`r papaja::apa_num(within_sessions_states_lower)`$, $`r papaja::apa_num(within_sessions_states_upper)`$], more similar within participants (M = `r papaja::apa_num(within_participants_within_sessions_states_mean)`, SE = `r papaja::apa_num(within_participants_within_sessions_states_se)`) than between participants (M = `r papaja::apa_num(between_participants_within_sessions_states_mean)`, SE = `r papaja::apa_num(between_participants_within_sessions_states_se)`).
 
-The interval plot in Figure \@ref(fig:amplitude-similarity-plots-alpha)B shows the results for the group-level contrasts estimating the difference in functional connectome similarity within and between participants at various levels of the session and state predictors. Overall, functional connectomes were estimated to be $`r papaja::apa_num(main_effect_estimate)`$ points more similar within participants (M = `r papaja::apa_num(within_participants_main_effect_mean)`, SE = `r papaja::apa_num(within_participants_main_effect_se)`) than between participants (M = `r papaja::apa_num(between_participants_main_effect_mean)`, SE = `r papaja::apa_num(between_participants_main_effect_se)`) when averaging over the levels of session and state, with differences no lower than $`r papaja::apa_num(main_effect_lower)`$ points and no higher than $`r papaja::apa_num(main_effect_upper)`$ points also being reasonably compatible with our data, given the background model. For the contrasts of session averaged over levels of state, functional connectomes from different sessions were estimated to be $`r papaja::apa_num(between_sessions_estimate)`$ points, 95% CI [$`r papaja::apa_num(between_sessions_lower)`$, $`r papaja::apa_num(between_sessions_upper)`$], more similar within participants (M = `r papaja::apa_num(within_participants_between_sessions_mean)`, SE = `r papaja::apa_num(within_participants_between_sessions_se)`) than between participants (M = `r papaja::apa_num(between_participants_between_sessions_mean)`, SE = `r papaja::apa_num(between_participants_between_sessions_se)`), and functional connectomes from the same sessions were estimated to be $`r papaja::apa_num(within_sessions_estimate)`$ points, 95% CI [$`r papaja::apa_num(within_sessions_lower)`$, $`r papaja::apa_num(within_sessions_upper)`$], more similar within participants (M = `r papaja::apa_num(within_participants_within_sessions_mean)`, SE = `r papaja::apa_num(within_participants_within_sessions_se)`) than between participants (M = `r papaja::apa_num(between_participants_within_sessions_mean)`, SE = `r papaja::apa_num(between_participants_within_sessions_se)`). For the contrasts of state averaged over levels of session, functional connectomes from different states were estimated to be $`r papaja::apa_num(between_states_estimate)`$ points, 95% CI [$`r papaja::apa_num(between_states_lower)`$, $`r papaja::apa_num(between_states_upper)`$], more similar within participants (M = `r papaja::apa_num(within_participants_between_states_mean)`, SE = `r papaja::apa_num(within_participants_between_states_se)`) than between participants (M = `r papaja::apa_num(between_participants_between_states_mean)`, SE = `r papaja::apa_num(between_participants_between_states_se)`), and functional connectomes from the same state were estimated to be $`r papaja::apa_num(within_states_estimate)`$ points, 95% CI [$`r papaja::apa_num(within_states_lower)`$, $`r papaja::apa_num(within_states_upper)`$], more similar within participants (M = `r papaja::apa_num(within_participants_within_states_mean)`, SE = `r papaja::apa_num(within_participants_within_states_se)`) than between participants (M = `r papaja::apa_num(between_participants_within_states_mean)`, SE = `r papaja::apa_num(between_participants_within_states_se)`). For the simple contrasts, functional connectomes from different sessions and states were estimated to be $`r papaja::apa_num(between_sessions_states_estimate)`$ points, 95% CI [$`r papaja::apa_num(between_sessions_states_lower)`$, $`r papaja::apa_num(between_sessions_states_upper)`$], more similar within participants (M = `r papaja::apa_num(within_participants_between_sessions_states_mean)`, SE = `r papaja::apa_num(within_participants_between_sessions_states_se)`) than between participants (M = `r papaja::apa_num(between_participants_between_sessions_states_mean)`, SE = `r papaja::apa_num(between_participants_between_sessions_states_se)`). Functional connectomes from different sessions but the same state were estimated to be $`r papaja::apa_num(between_sessions_within_states_estimate)`$ points, 95% CI [$`r papaja::apa_num(between_sessions_within_states_lower)`$, $`r papaja::apa_num(between_sessions_within_states_upper)`$], more similar within participants (M = `r papaja::apa_num(within_participants_between_sessions_within_states_mean)`, SE = `r papaja::apa_num(within_participants_between_sessions_within_states_se)`) than between participants (M = `r papaja::apa_num(between_participants_between_sessions_within_states_mean)`, SE = `r papaja::apa_num(between_participants_between_sessions_within_states_se)`). Functional connectomes from the same session but different states were estimated to be $`r papaja::apa_num(within_sessions_between_states_estimate)`$ points, 95% CI [$`r papaja::apa_num(within_sessions_between_states_lower)`$, $`r papaja::apa_num(within_sessions_between_states_upper)`$], more similar within participants (M = `r papaja::apa_num(within_participants_within_sessions_between_states_mean)`, SE = `r papaja::apa_num(within_participants_within_sessions_between_states_se)`) than between participants (M = `r papaja::apa_num(between_participants_within_sessions_between_states_mean)`, SE = `r papaja::apa_num(between_participants_within_sessions_between_states_se)`). Functional connectomes from the same session and state were estimated to be $`r papaja::apa_num(within_sessions_states_estimate)`$ points, 95% CI [$`r papaja::apa_num(within_sessions_states_lower)`$, $`r papaja::apa_num(within_sessions_states_upper)`$], more similar within participants (M = `r papaja::apa_num(within_participants_within_sessions_states_mean)`, SE = `r papaja::apa_num(within_participants_within_sessions_states_se)`) than between participants (M = `r papaja::apa_num(between_participants_within_sessions_states_mean)`, SE = `r papaja::apa_num(between_participants_within_sessions_states_se)`).
-
-The ridge plots in Figure \@ref(fig:amplitude-similarity-plots-alpha)C show the results for the individual-level contrasts estimating the difference in functional connectome similarity within and between participants at various levels of the session and state predictors. Each ridge depicts the 95% compatibility distribution [@schwederhjort_ConfidenceLikelihoodProbability_2016; @xiesingh_ConfidenceDistributionFrequentist_2013] for a given contrast, and the gradient fill shows each compatible value's distance from the group-level point estimate. The group-level contrast results for a given effect are depicted here as a grey interval in the background, for ease of comparison between the group-level and individual-level estimates. Although the group-level estimates were representative of the within-between similarities of some participants, we emphasize that they were not representative of a roughly equal amount of participants, who either had estimates compatible with both less and more similarity within than between individuals, or who has estimates moderately or strongly higher than the group-level estimates.
+Here the ridge plots in Figure \@ref(fig:amplitude-similarity-plots-alpha)C show the group-level estimates were more representative of the within-between similarities of some participants; however, again we found that there were participants who either had estimates compatible with both less and more similarity within than between individuals, or who had estimates moderately higher than the group-level estimates.
 
 <!-- Footnotes start ---------------------------------------------------------->
 
